RESOLVED FIXED211251
Web Inspector: Browser: crash when handling `disable`
https://bugs.webkit.org/show_bug.cgi?id=211251
Summary Web Inspector: Browser: crash when handling `disable`
Devin Rousso
Reported 2020-04-30 14:07:24 PDT
ASSERTION FAILED: inspector /Volumes/DATA/OpenSource/Source/WebKit/UIProcess/Inspector/Agents/InspectorBrowserAgent.cpp(91) : virtual void WebKit::InspectorBrowserAgent::disable(WebKit::ErrorString &) 1 0x10dcc8919 WTFCrash 2 0x114704d8b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1158b1234 WebKit::InspectorBrowserAgent::disable(WTF::String&) 4 0x1158b1140 WebKit::InspectorBrowserAgent::willDestroyFrontendAndBackend(Inspector::DisconnectReason) 5 0x10ee6e7fc Inspector::AgentRegistry::willDestroyFrontendAndBackend(Inspector::DisconnectReason) 6 0x1158ae225 WebKit::WebPageInspectorController::disconnectFrontend(Inspector::FrontendChannel&) 7 0x1158ab5d5 WebKit::WebInspectorProxy::closeFrontendPageAndWindow() 8 0x1158ab49c WebKit::WebInspectorProxy::invalidate() 9 0x1155a8587 WebKit::WebPageProxy::close() 10 0x1157c066d WKPageClose
Attachments
Patch (1.73 KB, patch)
2020-04-30 14:24 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2020-04-30 14:24:21 PDT
Daniel Bates
Comment 2 2020-05-01 13:09:49 PDT
Comment on attachment 398090 [details] Patch Patch looks good. A better patch would add a unit test for this as it looks testable.
EWS
Comment 3 2020-05-01 14:09:56 PDT
Committed r261020: <https://trac.webkit.org/changeset/261020> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398090 [details].
Radar WebKit Bug Importer
Comment 4 2020-05-01 14:10:19 PDT
Note You need to log in before you can comment on or make changes to this bug.