Web Inspector: Browser: crash when handling `disable` https://bugs.webkit.org/show_bug.cgi?id=211251

Reviewed by Daniel Bates.

* UIProcess/Inspector/Agents/InspectorBrowserAgent.cpp:
(WebKit::InspectorBrowserAgent::disable):
If the inspected page crashed, we won't have a `WebInspectorProxy` anymore.


Canonical link: https://commits.webkit.org/224200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261020 268f45cc-cd09-0410-ab3c-d52691b4dbfc